--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -7,3 +7,6 @@
 <% end %>
 
 <h1><%= @user.username %></h1>
+<div>挨拶文:<%= @user.pr_text %></div>
+<div>Twitter:<%= @user.twitter_id %></div>
+<div>Discord:<%= @user.discord_id %></div>
