--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,13 +10,17 @@
   </head>
 
   <body>
-      <div><%= link_to 'マイページ', mypage_path %></div>
-    <% if user_signed_in? %>
-      <div><%= link_to 'ログアウト', destroy_user_session_path, method: :delete %></div>
-    <% else %>
-      <div><%= link_to 'ログイン', new_user_session_path %></div>
-      <div><%= link_to 'アカウント作成', new_user_registration_path %></div>
-    <% end %>
+    <h1>つみあげハウス大図鑑</h1>
+    <div>
+        <div style="text-align:right"><%= link_to 'マイページ', mypage_path %></div>
+      <% if user_signed_in? %>
+        <div style="text-align:right"><%= link_to 'ログアウト', destroy_user_session_path, method: :delete %></div>
+        <div><%= link_to 'Top', users_path %></div>
+      <% else %>
+        <div style="text-align:right"><%= link_to 'ログイン', new_user_session_path %></div>
+        <div style="text-align:right"><%= link_to '新規登録', new_user_registration_path %></div>
+      <% end %>
+    </div>
     <%= yield %>
   </body>
 </html>
